[gd_scene load_steps=35 format=3 uid="uid://pvgqvdmdmbub"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_nxjp1"]
[ext_resource type="Texture2D" uid="uid://u8dqtvq5o6he" path="res://player/walk_down0009.png" id="1_txj3f"]
[ext_resource type="Texture2D" uid="uid://ldtsvn7ek83k" path="res://player/idle.png" id="2_8m14d"]
[ext_resource type="Texture2D" uid="uid://chkwlto3llv02" path="res://player/walk_down0010.png" id="2_u3wrw"]
[ext_resource type="Texture2D" uid="uid://cf7q0s0tkaa80" path="res://player/walk_down0011.png" id="3_sy16t"]
[ext_resource type="Texture2D" uid="uid://bdnanuah5dpn5" path="res://player/walk_down0012.png" id="4_b0i8v"]
[ext_resource type="Texture2D" uid="uid://dsqdnlhnpn1ob" path="res://player/walk_down0013.png" id="5_4bjrj"]
[ext_resource type="Texture2D" uid="uid://0bgf3me17l0h" path="res://player/walk_down0014.png" id="6_16aqn"]
[ext_resource type="Texture2D" uid="uid://dgd5jdf7uxn4q" path="res://player/walk_down0015.png" id="7_g8hry"]
[ext_resource type="Texture2D" uid="uid://vfqv8pn5vncw" path="res://player/walk_down0016.png" id="8_f25r3"]
[ext_resource type="Texture2D" uid="uid://c5p1nxsn843t3" path="res://player/walk_right0009.png" id="9_oq1ri"]
[ext_resource type="Texture2D" uid="uid://nnvaytxwhhnv" path="res://player/walk_right0010.png" id="10_fw44y"]
[ext_resource type="Texture2D" uid="uid://dnj7agk8r3nyk" path="res://player/walk_right0011.png" id="11_53adf"]
[ext_resource type="Texture2D" uid="uid://caxtyc4e8r4tx" path="res://player/walk_right0012.png" id="12_4djua"]
[ext_resource type="Texture2D" uid="uid://bequl483n76mp" path="res://player/walk_right0013.png" id="13_4jkql"]
[ext_resource type="Texture2D" uid="uid://cs7p4yhboidyb" path="res://player/walk_right0014.png" id="14_i5rk5"]
[ext_resource type="Texture2D" uid="uid://bcu8mgrlcfyfe" path="res://player/walk_right0015.png" id="15_yunv8"]
[ext_resource type="Texture2D" uid="uid://bngi56u44wvw3" path="res://player/walk_right0016.png" id="16_4pjwt"]
[ext_resource type="Texture2D" uid="uid://dadjnun74w1a8" path="res://player/walk_up0009.png" id="18_cp7fe"]
[ext_resource type="Texture2D" uid="uid://jplgeca4rjnv" path="res://player/walk_up0010.png" id="19_vl1cp"]
[ext_resource type="Texture2D" uid="uid://cs0aosmfxv04x" path="res://player/walk_up0011.png" id="20_b5evp"]
[ext_resource type="Texture2D" uid="uid://bvpbdwlne8ecq" path="res://player/walk_up0012.png" id="21_nt32p"]
[ext_resource type="Texture2D" uid="uid://4btok6uf6xni" path="res://player/walk_up0013.png" id="22_i61gw"]
[ext_resource type="Texture2D" uid="uid://c6tylaotxxiiy" path="res://player/walk_up0014.png" id="23_6ut7a"]
[ext_resource type="Texture2D" uid="uid://dxxs8weinqusl" path="res://player/walk_up0015.png" id="24_ywi2i"]
[ext_resource type="Texture2D" uid="uid://daa40ax7jclmj" path="res://player/walk_up0016.png" id="25_jd813"]
[ext_resource type="AudioStream" uid="uid://b7ik624k3nnac" path="res://audio/laser-gun-shot-sound.mp3" id="27_n2obi"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cr3o1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_4bjrj")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8m14d")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8m14d")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_cp7fe")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_txj3f")
}, {
"duration": 1.0,
"texture": ExtResource("2_u3wrw")
}, {
"duration": 1.0,
"texture": ExtResource("3_sy16t")
}, {
"duration": 1.0,
"texture": ExtResource("4_b0i8v")
}, {
"duration": 1.0,
"texture": ExtResource("5_4bjrj")
}, {
"duration": 1.0,
"texture": ExtResource("6_16aqn")
}, {
"duration": 1.0,
"texture": ExtResource("7_g8hry")
}, {
"duration": 1.0,
"texture": ExtResource("8_f25r3")
}],
"loop": true,
"name": &"walk_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_oq1ri")
}, {
"duration": 1.0,
"texture": ExtResource("10_fw44y")
}, {
"duration": 1.0,
"texture": ExtResource("11_53adf")
}, {
"duration": 1.0,
"texture": ExtResource("12_4djua")
}, {
"duration": 1.0,
"texture": ExtResource("13_4jkql")
}, {
"duration": 1.0,
"texture": ExtResource("14_i5rk5")
}, {
"duration": 1.0,
"texture": ExtResource("15_yunv8")
}, {
"duration": 1.0,
"texture": ExtResource("16_4pjwt")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_oq1ri")
}, {
"duration": 1.0,
"texture": ExtResource("10_fw44y")
}, {
"duration": 1.0,
"texture": ExtResource("11_53adf")
}, {
"duration": 1.0,
"texture": ExtResource("12_4djua")
}, {
"duration": 1.0,
"texture": ExtResource("13_4jkql")
}, {
"duration": 1.0,
"texture": ExtResource("14_i5rk5")
}, {
"duration": 1.0,
"texture": ExtResource("15_yunv8")
}, {
"duration": 1.0,
"texture": ExtResource("16_4pjwt")
}],
"loop": true,
"name": &"walk_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_cp7fe")
}, {
"duration": 1.0,
"texture": ExtResource("19_vl1cp")
}, {
"duration": 1.0,
"texture": ExtResource("20_b5evp")
}, {
"duration": 1.0,
"texture": ExtResource("21_nt32p")
}, {
"duration": 1.0,
"texture": ExtResource("22_i61gw")
}, {
"duration": 1.0,
"texture": ExtResource("23_6ut7a")
}, {
"duration": 1.0,
"texture": ExtResource("24_ywi2i")
}, {
"duration": 1.0,
"texture": ExtResource("25_jd813")
}],
"loop": true,
"name": &"walk_up",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xj741"]
radius = 72.0
height = 192.0

[sub_resource type="CircleShape2D" id="CircleShape2D_m4y12"]
radius = 219.18

[sub_resource type="CircleShape2D" id="CircleShape2D_r73vb"]
radius = 205.572

[sub_resource type="Animation" id="Animation_ym5nd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.313726, 0.298039, 0)]
}

[sub_resource type="Animation" id="Animation_m3dnf"]
resource_name = "hurtBlink"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.0002, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.313726, 0.298039, 0.690196), Color(1, 0.313726, 0.298039, 0.690196), Color(1, 0.313726, 0.298039, 0.690196), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ywccj"]
_data = {
"RESET": SubResource("Animation_ym5nd"),
"hurtBlink": SubResource("Animation_m3dnf")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
y_sort_enabled = true
position = Vector2(209, 248)
scale = Vector2(0.5, 0.5)
collision_mask = 3
script = ExtResource("1_nxjp1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
clip_children = 2
sprite_frames = SubResource("SpriteFrames_cr3o1")
animation = &"idle_up"

[node name="ColorRect" type="ColorRect" parent="AnimatedSprite2D"]
offset_left = -294.0
offset_top = -328.0
offset_right = 236.0
offset_bottom = 334.0
color = Color(1, 0.313726, 0.298039, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 203)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_xj741")

[node name="portal_detector" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="portal_detector"]
shape = SubResource("CircleShape2D_m4y12")

[node name="health_detector" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="health_detector"]
shape = SubResource("CircleShape2D_r73vb")

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ywccj")
}

[node name="shootPointWR" type="Marker2D" parent="."]
position = Vector2(200, 114)

[node name="shootPointWL" type="Marker2D" parent="."]
position = Vector2(-226, 114)

[node name="shootPointUP" type="Marker2D" parent="."]
position = Vector2(-10, -280)

[node name="shootPointDOWN" type="Marker2D" parent="."]
position = Vector2(4, 276)

[node name="shotLaser" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("27_n2obi")

[connection signal="area_entered" from="portal_detector" to="." method="_on_portal_detector_area_entered"]
[connection signal="area_entered" from="health_detector" to="." method="_on_health_detector_area_entered"]
